[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fprime-freertos-ci"
dynamic = ["version"]
description = "F Prime CI plugin for FreeRTOS"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["fprime", "embedded", "nasa", "flight", "software"]
authors = [
  {name = "Kevin F. Ortega", email = "kevin.f.ortega@jpl.nasa.gov"},
  {name = "Michael Starch", email = "Michael.D.Starch@jpl.nasa.gov"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "fprime-ci"
]

[project.urls]
Homepage = "https://fprime.jpl.nasa.gov"
Documentation = "https://fprime.jpl.nasa.gov/latest/docs/"
Repository = "https://github.com/fprime-community/fprime-freertos"


[project.entry-points.fprime_gds]
freertos_ci = "fprime_freertos.plugins.freertos_ci:FreeRTOSCi"

####
# setuptools_scm dynamically generates version number from git, as well as automatically
# include all data files tracked by git (e.g. flash/static/** files).
# See https://setuptools.pypa.io/en/latest/userguide/datafiles.html
####
[tool.setuptools_scm]
root = ".."
